--- a/index.html
+++ b/index.html
@@ -10,46 +10,8 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-<div class="knob-surround d-none">
-
-    <div class="knob" ></div>
-
-    <span class="min">Min</span>
-    <span class="max">Max</span>
-
-    <div class="ticks">
-        <div class="tick activetick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-        <div class="tick"></div>
-    </div>
-
-</div>
     <div id="stage" class="container-fluid">
+        <input id="volume-control" class="form-control d-none" type="range" style="transform: rotateZ(270deg); z-index: 1000; position: absolute; width: 400px; top: 50%; left: -10%;" min="0" max="100"/>
         <div class="row" style="background: black;">
             <div id="car-info-container" class="col-xl-4 col-lg-4 col-md-4 pr-0 text-white">
                 <section id="car-info">
@@ -156,21 +118,62 @@
     </div>
     <footer class="text-white mt-4" style="background: black;">
         <div class="container-fluid py-3">
-            <div class="row">
-                <div class="ml-5"></div>
-                <div class="ml-3"></div>
-
-                <div class="col-md-1"><img src="img/car.png" style="width: 110%"></div>
-                <div class="col-md-1"><img src="img/coolac.png" style="width: 110%"></div>
-                <div class="col-md-1"><img src="img/heat.png" style="width: 110%"></div>
-                <div class="col-md-1"><img src="img/seat.png" style="width: 110%"></div>
-                <div class="col-md-1"><img src="img/temperature.png" style="width: 110%"></div>
-                <div class="col-md-1"><img src="img/ac%20control.png" style="width: 110%"></div>
-                <div class="col-md-1"><img src="img/temperature.png" style="width: 110%"></div>
-                <div class="col-md-1"><img src="img/SEAT2.png" style="width: 110%"></div>
-                <div class="col-md-1"><img src="img/music.png" style="width: 110%"></div>
-                <div class="col-md-1"><img src="img/phone.png" style="width: 110%"></div>
-                <div class="col-md-1"><img src="img/Volume.png" style="width: 110%"></div>
+            <div class="row justify-content-center align-content-center align-items-center">
+                <div class="col-md-1 active">
+                    <div class="footer-image-container">
+                        <img src="img/car.png" width="75" height="65">
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <div class="footer-image-container">
+                        <img src="img/coolac.png" width="75" height="65">
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <div class="footer-image-container">
+                        <img src="img/heat.png" width="75" height="65">
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <div class="footer-image-container">
+                        <img src="img/seat.png" width="75" height="65">
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <div class="footer-image-container">
+                        <img src="img/temperature.png" width="75" height="65">
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <div class="footer-image-container">
+                        <img src="img/ac%20control.png" width="75" height="65">
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <div class="footer-image-container">
+                        <img src="img/temperature.png" width="75" height="65">
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <div class="footer-image-container">
+                        <img src="img/SEAT2.png" width="75" height="65">
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <div class="footer-image-container">
+                        <img src="img/music.png" width="75" height="65">
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <div class="footer-image-container">
+                        <img src="img/phone.png" width="75" height="65">
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <div class="footer-image-container">
+                        <img src="img/Volume.png" width="75" height="65">
+                    </div>
+                </div>
 
             </div>
         </div>
@@ -181,9 +184,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-<script src="https://cdn.rawgit.com/hammerjs/touchemulator/master/touch-emulator.js"></script>
-<script> TouchEmulator(); </script>
-<script src="https://hammerjs.github.io/dist/hammer.js"></script>
+<script src="http://hammerjs.github.io/dist/hammer.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script src="https://cdn.rawgit.com/julianshapiro/velocity/master/velocity.min.js"></script>
 <script src="https://use.fontawesome.com/bdfd714ac1.js"></script>
