Added function that will change the active element based on which view is selected through left and right swipes.

--- a/index.html
+++ b/index.html
@@ -119,57 +119,57 @@
     <footer class="text-white mt-4" style="background: black;">
         <div class="container-fluid py-3">
             <div class="row justify-content-center align-content-center align-items-center">
-                <div class="col-md-1 active">
+                <div class="col-md-1 active car-image">
                     <div class="footer-image-container">
                         <img src="img/car.png" width="75" height="65">
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 coolac-image">
                     <div class="footer-image-container">
                         <img src="img/coolac.png" width="75" height="65">
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 heat-image">
                     <div class="footer-image-container">
                         <img src="img/heat.png" width="75" height="65">
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 seat-image">
                     <div class="footer-image-container">
                         <img src="img/seat.png" width="75" height="65">
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 temp-image">
                     <div class="footer-image-container">
                         <img src="img/temperature.png" width="75" height="65">
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 ac-image">
                     <div class="footer-image-container">
                         <img src="img/ac%20control.png" width="75" height="65">
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 temp-image">
                     <div class="footer-image-container">
                         <img src="img/temperature.png" width="75" height="65">
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 seat-2-image">
                     <div class="footer-image-container">
                         <img src="img/SEAT2.png" width="75" height="65">
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 music-image">
                     <div class="footer-image-container">
                         <img src="img/music.png" width="75" height="65">
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 phone-image">
                     <div class="footer-image-container">
                         <img src="img/phone.png" width="75" height="65">
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 volume-image">
                     <div class="footer-image-container">
                         <img src="img/Volume.png" width="75" height="65">
                     </div>
